--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -12,7 +12,7 @@
             padding: 0;
         }
         header, footer {
-            background-color: #333;
+            background-color: #d14a4a;
             color: #fff;
             padding: 10px 0;
             text-align: center;
@@ -28,7 +28,7 @@
             text-align: left;
         }
         th {
-            background-color: #333;
+            background-color: #d14a4a;
             color: #fff;
         }
     </style>
